Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,4 +11,6 @@ steps:
   - checkout: self
   - task: ArchiveFiles@2
   inputs:
+   rootFolderOrFile: '$(Build.SourcesDirectory)'
+   includeRootFolder: false
 
