--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,9 @@ pool:
 steps:
   - checkout: self
   - task: ArchiveFiles@2
-  inputs:
-   rootFolderOrFile: '$(Build.SourcesDirectory)'
-   includeRootFolder: false
+    inputs:
+      rootFolderOrFile: '$(Build.SourcesDirectory)'
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/XYZ.zip'
 
